cabal-version: 1.12

name:           mutgraph
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/mutgraph#readme>
homepage:       https://github.com/githubuser/mutgraph#readme
bug-reports:    https://github.com/githubuser/mutgraph/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/mutgraph

library
  exposed-modules:
      MutGraph.Graph
      MutGraph.AdjacencyList
      MutGraph.Dijkstra
      MutGraph.GraphSearch
      MutGraph.Impl.Dijkstra
      MutGraph.Impl.DijkstraStandalone
      MutGraph.Impl.GraphSearch
      MutGraph.Impl.ParseGraph
      MutContainers.Run
      MutContainers.Curry
      MutContainers.Vector
      MutContainers.Unbox
      MutContainers.Bi.Container
      MutContainers.Bi.Size
      MutContainers.Bi.List
      MutContainers.Bi.Map
      MutContainers.Bi.PriorityQueue
      MutContainers.Bi.Heap
      MutContainers.Mono.Container
      MutContainers.Mono.Size
      MutContainers.Mono.List
      MutState.State
      Tests
      Tests.MutGraph.Dijkstra
  other-modules:
      Paths_mutgraph
  hs-source-dirs:
      src test
  build-depends:
      base >=4.7 && <5
      , vector
      , vector-th-unbox
      , deepseq
      , primitive
      , bytestring
      , HUnit
      , template-haskell
  ghc-options: -Wall -O2 -optc-O3
  default-language: Haskell2010
  default-extensions:
      BangPatterns ConstraintKinds DataKinds DefaultSignatures 
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GADTs InstanceSigs KindSignatures
      MultiParamTypeClasses NoImplicitPrelude
      PolyKinds QuantifiedConstraints RankNTypes ScopedTypeVariables
      TupleSections TypeFamilies UndecidableInstances

-- command to build for profile: stack build --profile
-- command to run for profile: stack exec --profile -- testproj-exe +RTS -p
executable mutgraph-exe
  main-is: Main.hs
  other-modules:
      Paths_mutgraph
  hs-source-dirs:
      app
  -- ghc-options: -threaded -rtsopts -with-rtsopts=-N
  ghc-options: -threaded -O2 -optc-O3
  build-depends:
      base >=4.7 && <5
    , mutgraph
  default-language: Haskell2010
