cabal-version: 1.12

name:           mutgraph
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/mutgraph#readme>
homepage:       https://github.com/githubuser/mutgraph#readme
bug-reports:    https://github.com/githubuser/mutgraph/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/mutgraph

library
  exposed-modules:
      Containers.Prelude
      Containers.Curry
      Containers.Unbox
      Containers.Container
      Containers.NonEmpty
      Containers.List
      MutState.State
      MutState.Run
      MutContainers.Vector
      MutContainers.Container
      MutContainers.Map
      MutContainers.PriorityQueue
      MutContainers.Heap
      MutContainers.List
      MutGraph.Graph
      MutGraph.AdjacencyList
      MutGraph.Dijkstra
      MutGraph.GraphSearch
      MutGraph.Parser
      Tests
      Tests.MutGraph.Dijkstra
      Tests.Sandbox
  other-modules:
      Paths_mutgraph
  hs-source-dirs:
      src test
  build-depends:
      base >=4.7 && <5
      , vector
      , vector-th-unbox
      , deepseq
      , primitive
      , bytestring
      , HUnit
      , template-haskell
  ghc-options: -Wall -O2
  default-language: Haskell2010
  default-extensions:
      BangPatterns ConstraintKinds DataKinds DefaultSignatures 
      FlexibleContexts FlexibleInstances FunctionalDependencies
      GADTs InstanceSigs KindSignatures
      MultiParamTypeClasses NoImplicitPrelude
      PolyKinds QuantifiedConstraints RankNTypes ScopedTypeVariables
      TupleSections TypeFamilies UndecidableInstances

-- to get simple stats run: stack exec -- mutgraph-exe +RTS -s
executable mutgraph-exe
  main-is: Main.hs
  other-modules:
      Paths_mutgraph
  hs-source-dirs:
      app
  ghc-options: -threaded -O2
  -- more RTS profiling options (slows down):  -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , mutgraph
  default-language: Haskell2010
